separate Dtos to a Shared project
