# MyApi/DTOs/WeatherAnalysisDto.cs
@@ -1,3 +1,0 @@
-namespace MyApi;
-
-public record WeatherAnalysisDto(Guid Id, DateTime CreatedAt, string Analysis);
