# MyApi/DTOs/WeatherForecastDto.cs
@@ -1,10 +1,0 @@
-using System.ComponentModel.DataAnnotations;
-
-namespace MyApi;
-
-public record WeatherForecastDto(
-    [property: Required] string Date, 
-    [property: Required] int TemperatureC, 
-    [property: Required] int TemperatureF,
-    string? Summary = null,
-    string? Icon = null);
